--- a/sass/theme/template-parts/pages/default-page-styling.scss
+++ b/sass/theme/template-parts/pages/default-page-styling.scss
@@ -109,3 +109,43 @@ a {
         text-decoration: none;
     }
 }
+
+.main-content input.form-control.searchForm {
+    border-radius: 0;
+    border: none!important;
+    -webkit-box-shadow: none!important;
+    box-shadow: none!important;
+    background-color: #2d2d2d;
+    font-family: Montserrat,sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    letter-spacing: .9px;
+    padding-left: 20px;
+    text-transform: uppercase;
+    color: #fff;
+    margin: 15px 0;
+}
+
+.main-content input.form-control.searchForm::placeholder {
+    color: white;
+    text-transform: uppercase;
+}
+
+@include desktop {
+    .offer-0:nth-of-type(1) .background-section {
+        background-position:-50px !important;
+    }
+}
+@include phone {
+    .col-md-4.background-section {
+        position: relative;
+        top: 1px;
+    }
+}
+
+
+@include desktop{
+    .home section#from-our-blog .headline-section a.btn {
+        margin-left: 30px;
+    }
+}
