--- a/sass/theme/template-parts/layout/global-fonts.scss
+++ b/sass/theme/template-parts/layout/global-fonts.scss
@@ -80,3 +80,165 @@ a.dropdown-item {
     font-size: 15px;
     letter-spacing: 0.12em;
 }
+
+.mobile-only {
+    @include desktop {
+        display:none;
+    }
+}
+
+@include phone {
+    .social-icons {
+        display: block !important;
+        position: absolute;
+    }
+    
+    input.form-control.searchForm {
+        width: 140px;
+    }
+    .mobile-menu.showing {
+        background-color: #4c4c4c !important;
+    }
+    
+    .mobile-menu.showing .menu-wrapper .nav-link {
+        color: white !important;
+        font-weight: 400 !important;
+    }
+    
+    .dropdown-toggle::after {
+        color: #939598 !important;
+        margin-left: 12px;
+    }
+    
+    .mobile-menu.showing .fa-times {
+        color: #939598 !important;
+        left: auto !important;
+        right: 35px !important;
+        top: 100px !important;
+    }
+
+    .mobile-menu a.dropdown-item {
+        color: white !important;
+    }
+}
+
+@include desktop {
+    .background-section a {
+        width: 100px;
+        height: 100px;
+    }
+    
+    .background-section {
+        position: relative;
+    }
+    
+    .background-section a div {
+        width: 100%;
+        height: 100%;
+    }
+
+    .services-overlay:hover {
+        background-image: url(/wp-content/uploads/2020/03/Service-hover-e1583360963219.png) !important;
+    }
+    
+    .services-overlay {
+        transition: 0.2s ease;
+    }
+    
+    .services-overlay:hover::after {
+        color: blue !important;
+    }
+    
+    .services-overlay:hover:after {
+        content: url(/wp-content/uploads/2020/03/bluestar.png) !important;
+    }
+    
+    .services-overlay::after {
+        transition: 0.2s ease;
+    }
+    
+}
+
+.mob-menu-header-holder.mobmenu {
+    height: 0;
+}
+
+.mob-menu-logo-holder {display: none;}
+
+.mobmenur-container {
+    top: 77px !important;
+    right: 10px !important;
+}
+
+body {
+    padding-top: 0 !important;
+}
+
+
+
+i.mob-icon-menu.mob-menu-icon {
+    color: #fff;
+    font-size: 47px;
+}
+
+.mobmenu-panel {background-color: #4c4c4c !important;}
+
+.mobmenu-content .menu-item a {
+    color: white !important;
+    font-family: 'Montserrat', sans-serif !important;
+    text-transform: uppercase !important;
+    letter-spacing: 0.12em !important;
+}
+
+.mob-icon-down-open:before {
+    color: #939598 !important;
+}
+
+.mob-expand-submenu {
+    float: unset !important;
+    display: inline-block;
+    right: -5px;
+    top: 3px;
+}
+
+#mobmenuright li a {
+    display: inline-block !important;
+}
+
+.show-nav-right .mob-expand-submenu i {
+}
+
+.mobmenu-content #mobmenuright li:hover {
+    background-color: #4c4c4c !important;
+}
+
+.mobmenu-content #mobmenuright > li > a {
+    background-color: #4c4c4c !important;
+}
+
+.mobmenu-content #mobmenuright .sub-menu {
+    background-color: #4c4c4c !important;
+}
+
+.mobmenu-content li > .sub-menu li {
+    padding-right: 0 !important;
+}
+
+.mobmenu-content li > .sub-menu li a {
+    font-size: 15px !important;
+}
+
+.show-panel .mob-cancel-button {}
+
+.mobmenu-right-panel .mobmenu-right-bt {
+    right: 10px !important;
+    top: 30px !important;
+}
+
+.mobmenu-content {
+    margin-top: 90px !important;
+}
+
+@include phone {
+    .services-overlay {margin-right: 0 !important;width: 100% !important;margin-bottom: 25px !important;margin-top: 0 !important;}
+}
