--- a/sass/theme/template-parts/layout/sidebar.scss
+++ b/sass/theme/template-parts/layout/sidebar.scss
@@ -44,7 +44,7 @@
             width: 100%;
             max-height: 125px;
             object-fit:cover;
-            object-position: center;
+            object-position: top right;
         }
         .container {
             padding-top: 20px;
